# learning

./: README.md
Elixir/: hello.ex
Go/hello/: hello.go
Google App Engine/handlers/: __init__.py  registrations.py
Google App Engine/models/: registration.py
Google App Engine/views/: __init__.py
NASM/: run.sh
OpenGL/: CMakeLists.txt  Display.cpp  Display.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  main.cpp  requirements.sh
OpenGL/res/: basicShader.vs
Ruby on Rails/app/views/articles/: new.html.erb
Ruby on Rails/config/: secrets.yml
gae/: app.py
gae/handlers/: mainpage.py
gae/models/: registration.py
gae/views/: form.html
go/: hello.go  slices.go  sort.go
google-app-engine/: app.yaml
google-app-engine/css/: styles.css
google-app-engine/handlers/: mainpage.py
google-app-engine/views/: confirmation.html  registrations.html
nam/: hello.asm
opengl/: CMakeCache.txt  Makefile  cmake_install.cmake
rails/config/: routes.rb
rails/db/: schema.rb
rails/test/models/: article_test.rb
